--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "thirdparty/backward-cpp"]
 	path = thirdparty/backward-cpp
 	url = https://github.com/bombela/backward-cpp
+[submodule "thirdparty/sanitizers-cmake"]
+	path = thirdparty/sanitizers-cmake
+	url = https://github.com/arsenm/sanitizers-cmake
