Add CLI11 as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/sanitizers-cmake"]
 	path = thirdparty/sanitizers-cmake
 	url = https://github.com/arsenm/sanitizers-cmake
+[submodule "thirdparty/CLI11"]
+	path = thirdparty/CLI11
+	url = https://github.com/CLIUtils/CLI11.git
