--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "thirdparty/CLI11"]
 	path = thirdparty/CLI11
 	url = https://github.com/CLIUtils/CLI11.git
+[submodule "thirdparty/cuFHE"]
+	path = thirdparty/cuFHE
+	url = https://github.com/virtualsecureplatform/cuFHE.git
