--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,3 +60,24 @@ set_target_properties(test_plain_random
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
 )
 install(TARGETS test_plain_random DESTINATION bin)
+
+add_executable(test_crypto_random
+    backstream_dfa_runner.cpp
+    error.cpp
+    graph.cpp
+    test_crypto_random.cpp
+    offline_dfa.cpp
+    online_dfa.cpp
+    tfhepp_util.cpp
+)
+add_sanitizers(test_crypto_random)
+target_compile_options(test_crypto_random PUBLIC "$<$<CONFIG:DEBUG>:${HOMFA_CXXFLAGS_DEBUG}>")
+target_compile_options(test_crypto_random PUBLIC "$<$<CONFIG:RELEASE>:${HOMFA_CXXFLAGS_RELEASE}>")
+target_link_libraries(test_crypto_random ${HOMFA_LIBS})
+target_include_directories(test_crypto_random PRIVATE ${HOMFA_INCLUDE_DIRS})
+target_compile_definitions(test_crypto_random PRIVATE ${HOMFA_COMPILE_DEFINITIONS})
+set_target_properties(test_crypto_random
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+)
+install(TARGETS test_crypto_random DESTINATION bin)
