Add target benchmark

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ option(HOMFA_BUILD_HOMFA "Build homfa" ON)
 option(HOMFA_BUILD_TEST0 "Build test0" ON)
 option(HOMFA_BUILD_TEST_PLAIN_RANDOM "Build test_plain_random" OFF)
 option(HOMFA_BUILD_TEST_CRYPTO_RANDOM "Build test_crypto_random" OFF)
+option(HOMFA_BUILD_BENCHMARK "Build benchmark" OFF)
 
 if(HOMFA_BUILD_HOMFA)
     add_executable(homfa
@@ -93,4 +94,27 @@ if(HOMFA_BUILD_CRYPTO_RANDOM)
         RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
     )
     install(TARGETS test_crypto_random DESTINATION bin)
+endif()
+
+if(HOMFA_BUILD_BENCHMARK)
+    add_executable(benchmark
+        backstream_dfa_runner.cpp
+        error.cpp
+        graph.cpp
+        benchmark.cpp
+        offline_dfa.cpp
+        online_dfa.cpp
+        tfhepp_util.cpp
+    )
+    add_sanitizers(benchmark)
+    target_compile_options(benchmark PUBLIC "$<$<CONFIG:DEBUG>:${HOMFA_CXXFLAGS_DEBUG}>")
+    target_compile_options(benchmark PUBLIC "$<$<CONFIG:RELEASE>:${HOMFA_CXXFLAGS_RELEASE}>")
+    target_link_libraries(benchmark ${HOMFA_LIBS})
+    target_include_directories(benchmark PRIVATE ${HOMFA_INCLUDE_DIRS})
+    target_compile_definitions(benchmark PRIVATE ${HOMFA_COMPILE_DEFINITIONS})
+    set_target_properties(benchmark
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
+    )
+    install(TARGETS benchmark DESTINATION bin)
 endif()
