Show build and execution config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,12 +37,17 @@ set(HOMFA_INCLUDE_DIRS
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/spdlog/include>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/ThreadPool>
 )
-if(HOMFA_ENABLE_PROFILE)
-    set(HOMFA_LIBS tfhe++ Threads::Threads OpenMP::OpenMP_CXX Backward::Backward tbb libspot.a libbddx.a profiler tcmalloc)
-else()
-    set(HOMFA_LIBS tfhe++ Threads::Threads OpenMP::OpenMP_CXX Backward::Backward tbb libspot.a libbddx.a)
-endif()
+set(HOMFA_LIBS tfhe++ Threads::Threads OpenMP::OpenMP_CXX Backward::Backward tbb libspot.a libbddx.a)
 set(HOMFA_COMPILE_DEFINITIONS )
+
+if(CMAKE_BUILD_TYPE MATCHES Debug)
+    list(APPEND HOMFA_COMPILE_DEFINITIONS HOMFA_BUILD_DEBUG)
+endif()
+
+if(HOMFA_ENABLE_PROFILE)
+    list(APPEND profiler tcmalloc)
+    list(APPEND HOMFA_COMPILE_DEFINITIONS HOMFA_ENABLE_PROFILE)
+endif()
 
 set(CMAKE_C_FLAGS "")
 set(CMAKE_C_FLAGS_DEBUG "")
@@ -50,5 +55,22 @@ set(CMAKE_C_FLAGS_RELEASE "")
 set(CMAKE_CXX_FLAGS "")
 set(CMAKE_CXX_FLAGS_DEBUG "")
 set(CMAKE_CXX_FLAGS_RELEASE "")
+
+# Get git revision
+# Thanks to: https://stackoverflow.com/a/6526533
+set(HOMFA_GIT_REVISION "unknown")
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+    find_package(Git)
+    if(GIT_FOUND)
+        execute_process(
+            COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
+            WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+            OUTPUT_VARIABLE "HOMFA_GIT_REVISION"
+            ERROR_QUIET
+            OUTPUT_STRIP_TRAILING_WHITESPACE)
+        message(STATUS "Git revision: ${HOMFA_GIT_REVISION}")
+    endif(GIT_FOUND)
+endif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+list(APPEND HOMFA_COMPILE_DEFINITIONS HOMFA_GIT_REVISION="${HOMFA_GIT_REVISION}")
 
 add_subdirectory(src)
